[gd_scene load_steps=14 format=3 uid="uid://bn3fyevp02niv"]

[ext_resource type="Texture2D" uid="uid://1gygnx0x44wk" path="res://art/statoasty/UI books & more.png" id="1_ls8o3"]
[ext_resource type="Script" path="res://ui/settings.gd" id="2_rb7a7"]
[ext_resource type="FontFile" uid="uid://bk0dqa8dqm8de" path="res://font/Arcadepix Plus.ttf" id="2_s1xxi"]
[ext_resource type="Texture2D" uid="uid://y61m20p4xdwr" path="res://art/calame/x_normal.png" id="3_sbyde"]
[ext_resource type="Texture2D" uid="uid://b2rsr3rfkr086" path="res://art/calame/x_pressed.png" id="4_kehco"]
[ext_resource type="Texture2D" uid="uid://b8ocnoig8tjtm" path="res://art/calame/x_hover.png" id="5_g0dst"]
[ext_resource type="Texture2D" uid="uid://dk07cw0l7qoou" path="res://art/calame/x_disabled.png" id="6_cujrb"]
[ext_resource type="LabelSettings" uid="uid://dscamsml51w4" path="res://font/pause_menu.tres" id="8_8bngl"]
[ext_resource type="Script" path="res://components/inventory/core/equipment.gd" id="8_q18nj"]
[ext_resource type="Texture2D" uid="uid://tfnokk56peh2" path="res://art/calame/bar.png" id="9_gke0u"]
[ext_resource type="PackedScene" uid="uid://bdsvcaok0a6gg" path="res://components/inventory/core/equipment_slot.tscn" id="10_s15y4"]

[sub_resource type="LabelSettings" id="LabelSettings_aah60"]
font = ExtResource("2_s1xxi")
font_size = 32
font_color = Color(0.180392, 0.278431, 0.431373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jm24w"]
font = ExtResource("2_s1xxi")
font_size = 32
font_color = Color(0.729412, 0.45098, 0.137255, 1)

[node name="pause_menu" type="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -48.5
offset_right = 98.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(98, 48)
size_flags_vertical = 4
texture = ExtResource("1_ls8o3")
region_rect = Rect2(768, 64, 48, 48)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("2_rb7a7")
scale_slider_path = NodePath("tab_list/settings_tab/setting_list/scale/HSlider")
label_min_path = NodePath("tab_list/settings_tab/setting_list/scale/label_min")
label_max_path = NodePath("tab_list/settings_tab/setting_list/scale/label_max")
tab_list_path = NodePath("tab_list")
settings_tab_path = NodePath("tab_list/settings_tab")
equipment_tab_path = NodePath("tab_list/equipment_tab")

[node name="title" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.5
offset_top = -6.0
offset_right = 49.5
offset_bottom = 10.0
grow_horizontal = 2
texture = ExtResource("1_ls8o3")
region_rect = Rect2(80, 304, 32, 16)
patch_margin_left = 7
patch_margin_top = 3
patch_margin_right = 7
patch_margin_bottom = 3

[node name="label_settings" type="Label" parent="title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 1.0
offset_right = 127.5
offset_bottom = 28.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
text = "Pause Game"
label_settings = SubResource("LabelSettings_aah60")
horizontal_alignment = 1

[node name="close_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -7.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 0
texture_normal = ExtResource("3_sbyde")
texture_pressed = ExtResource("4_kehco")
texture_hover = ExtResource("5_g0dst")
texture_disabled = ExtResource("6_cujrb")

[node name="tab_settings" type="TextureButton" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = -17.5
offset_right = -14.0
offset_bottom = 0.5
grow_horizontal = 0
texture_normal = ExtResource("3_sbyde")
texture_pressed = ExtResource("4_kehco")
texture_hover = ExtResource("5_g0dst")
texture_disabled = ExtResource("6_cujrb")
stretch_mode = 0

[node name="tab_equipment" type="TextureButton" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_top = -17.5
offset_right = -40.0
offset_bottom = 0.5
grow_horizontal = 0
texture_normal = ExtResource("3_sbyde")
texture_pressed = ExtResource("4_kehco")
texture_hover = ExtResource("5_g0dst")
texture_disabled = ExtResource("6_cujrb")
stretch_mode = 0

[node name="tab_list" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="settings_tab" type="Control" parent="tab_list"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="setting_list" type="VBoxContainer" parent="tab_list/settings_tab"]
layout_mode = 0
offset_left = 9.0
offset_top = 15.0
offset_right = 187.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_constants/separation = 3

[node name="scale" type="NinePatchRect" parent="tab_list/settings_tab/setting_list"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
texture = ExtResource("1_ls8o3")
region_rect = Rect2(354, 274, 28, 12)
patch_margin_left = 27
patch_margin_top = 11
patch_margin_right = 27
patch_margin_bottom = 11

[node name="label_setting_name" type="Label" parent="tab_list/settings_tab/setting_list/scale"]
layout_mode = 1
offset_left = 4.0
offset_top = 3.0
offset_right = 431.0
offset_bottom = 30.0
scale = Vector2(0.4, 0.4)
text = "- UI Scale -"
label_settings = ExtResource("8_8bngl")
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="tab_list/settings_tab/setting_list/scale"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -8.0
offset_right = -23.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.25
max_value = 1.25
step = 0.05
value = 0.75

[node name="label_min" type="Label" parent="tab_list/settings_tab/setting_list/scale"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.206
anchor_top = 0.229
anchor_right = 0.206
anchor_bottom = 0.229
offset_left = -165.668
offset_top = -14.744
offset_right = -67.668
offset_bottom = 10.256
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(225, 16.25)
text = "Min: #
"
label_settings = ExtResource("8_8bngl")
horizontal_alignment = 1

[node name="label_max" type="Label" parent="tab_list/settings_tab/setting_list/scale"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.206
anchor_top = 0.229
anchor_right = 0.206
anchor_bottom = 0.229
offset_left = -38.668
offset_top = -14.744
offset_right = 59.332
offset_bottom = 10.256
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(225, 16.25)
text = "Max: #
"
label_settings = ExtResource("8_8bngl")
horizontal_alignment = 1

[node name="fullscreen" type="NinePatchRect" parent="tab_list/settings_tab/setting_list"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
texture = ExtResource("1_ls8o3")
region_rect = Rect2(354, 274, 28, 12)
patch_margin_left = 27
patch_margin_top = 11
patch_margin_right = 27
patch_margin_bottom = 11

[node name="label_setting_name" type="Label" parent="tab_list/settings_tab/setting_list/fullscreen"]
layout_mode = 1
offset_left = 4.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 29.0
scale = Vector2(0.4, 0.4)
text = "- Fullscreen -"
label_settings = ExtResource("8_8bngl")
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="tab_list/settings_tab/setting_list/fullscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="equipment_tab" type="Control" parent="tab_list"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="inventory_list" type="VBoxContainer" parent="tab_list/equipment_tab"]
layout_mode = 0
offset_left = 9.0
offset_top = 15.0
offset_right = 187.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_constants/separation = 3

[node name="inventory_container" type="VBoxContainer" parent="tab_list/equipment_tab/inventory_list"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 3

[node name="equipment" type="NinePatchRect" parent="tab_list/equipment_tab/inventory_list/inventory_container"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
texture = ExtResource("1_ls8o3")
region_rect = Rect2(354, 274, 28, 12)
patch_margin_left = 27
patch_margin_top = 11
patch_margin_right = 27
patch_margin_bottom = 11
script = ExtResource("8_q18nj")
inventory_name = "Equipment"
title_path = NodePath("divider_texture/label_equipment_name")
slot_path = NodePath("slot_container")

[node name="divider_texture" type="TextureRect" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 13.0
offset_right = 18.0
offset_bottom = 15.0
grow_horizontal = 2
texture = ExtResource("9_gke0u")

[node name="label_equipment_name" type="Label" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/divider_texture"]
layout_mode = 1
offset_left = -67.0
offset_top = -11.0
offset_right = 360.0
offset_bottom = 16.0
scale = Vector2(0.4, 0.4)
text = "Equipment"
label_settings = SubResource("LabelSettings_jm24w")
horizontal_alignment = 1

[node name="slot_container" type="Control" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 18.0
offset_right = 83.5
offset_bottom = 38.0
grow_horizontal = 2
mouse_filter = 2

[node name="equipment_head" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 18.5
offset_top = 7.0
offset_right = 38.5
offset_bottom = 27.0
type = 5

[node name="equipment_torso" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 18.5
offset_top = 35.0
offset_right = 38.5
offset_bottom = 55.0
type = 6

[node name="equipment_bottom" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 18.5
offset_top = 63.0
offset_right = 38.5
offset_bottom = 83.0
type = 7

[node name="equipment_feet" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 18.5
offset_top = 93.0
offset_right = 38.5
offset_bottom = 113.0
type = 8

[node name="equipment_trinket" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 122.5
offset_top = 7.0
offset_right = 142.5
offset_bottom = 27.0
type = 9

[node name="equipment_trinket2" parent="tab_list/equipment_tab/inventory_list/inventory_container/equipment/slot_container" instance=ExtResource("10_s15y4")]
layout_mode = 0
offset_left = 122.5
offset_top = 37.0
offset_right = 142.5
offset_bottom = 57.0
type = 9

[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="tab_settings" to="." method="_on_tab_settings_pressed"]
[connection signal="pressed" from="tab_equipment" to="." method="_on_tab_equipment_pressed"]
[connection signal="gui_input" from="tab_list/settings_tab/setting_list/scale/HSlider" to="." method="_on_scale_slider_gui_input"]
[connection signal="toggled" from="tab_list/settings_tab/setting_list/fullscreen/CheckBox" to="." method="_on_fullscreen_toggled"]
